changed the buttons (call to action) to only appear in the large versions. In the mobile versions of the web the images were covering the buttons, and they were not working. I couldn't find a quick fix, so I simply removed them from the web version

--- a/timepath-archive/index.html
+++ b/timepath-archive/index.html
@@ -106,8 +106,8 @@
  <!-- main -->
     <main class="main" role="main">
   <div class="sections">
-    <div id="home" class="section section-home section-default" style="background-image: url()">
-          <!-- article id="post-2" class="post-2 page type-page status-publish hentry">
+    <!-- div id="home" class="section section-home section-default" style="background-image: url()">
+          <article id="post-2" class="post-2 page type-page status-publish hentry">
             <div class="container">
               <div class="head">
                 <h2 class="title entry-title">
@@ -117,8 +117,8 @@
 <p>Timepath — Stories in Virtual Reality</p>
               </div>
             </div>
-          </article -->
-    </div>
+          </article>
+    </div -->
     <div id="movie" class="section section-movie section-default" style="background-image: url(movie/timepath.jpg)">
           <article id="post-9" class="post-9 page type-page status-publish hentry">
             <video class="hidden-sm hidden-xs" loop="true" autoplay="true" preload="auto">
@@ -146,27 +146,28 @@
           </article>
     </div>
     <div id="productions" class="section section-home section-default" style="background-image: url()">
-          <article id="post-17" class="post-17 page type-page status-publish has-post-thumbnail hentry" style="background-image: url(uploads/2016/01/productions.png)">
+          <article id="post-17" class="post-17 page type-page status-publish has-post-thumbnail hentry" style="background-image: url()">
             <div class="container">
               <div class="head">
                 <h2 class="title entry-title">
                   Timepath Productions                </h2>
               </div>
               <div class="body page-content entry-content">
-<p><span id="more-17"></span><div class="row"><div class="col-xs-10 col-xs-push-1 col-sm-6 col-sm-push-6 col-md-3 col-md-push-9 text-left readable">
+<p><span id="more-17"></span><div class="row">
+  <div class="col-xs-10 col-xs-push-1 col-sm-6 col-sm-push-6 col-md-3 col-md-push-9 text-left readable">
 <h2 class="title">Timepath <small>Productions</small></h2>
 <p>We are committed to deliver the best virtual reality experiences and stories.</p>
 <div class="hidden-xs hidden-sm">We will shoot in the strangest locations you can imagine, or model them, especially for you.We will craft interactive characters that will take you in strange worlds and fascinating story plots.</p>
 </div>
 <p>&nbsp;</p>
-<a class="btn btn-primary" data-track="home-en-quote" href="#offices" data-contact="Quotation">Request a quotation</a>
-</div><div class="col-sm-6 col-sm-pull-6 col-md-9 col-md-pull-3 col-lg-8 col-lg-pull-3"><img fetchpriority="high" decoding="async" class="aligncenter size-full wp-image-59" src="2016/01/productions.png" alt="TimePath Productions" width="941" height="615" /></div></div>
+<a class="btn btn-primary hidden-xs hidden-sm" data-track="home-en-quote" href="#offices" data-contact="Quotation">Request a quotation</a>
+</div>
+<div class="col-sm-6 col-sm-pull-6 col-md-9 col-md-pull-3 col-lg-8 col-lg-pull-3"><img fetchpriority="high" decoding="async" class="aligncenter size-full wp-image-59" src="2016/01/productions.png" alt="TimePath Productions" width="941" height="615" /></div></div>
               </div>
             </div>
           </article>
     </div>
     <div id="online" class="section section-home section-default" style="background-image: url()">
-          <!-- article id="post-34" class="post-34 page type-page status-publish has-post-thumbnail hentry" style="background-image: url(2016/01/online.png)" -->
           <article id="post-34" class="post-34 page type-page status-publish has-post-thumbnail hentry" style="background-image: url()">
             <div class="container">
               <div class="head">
@@ -181,13 +182,13 @@
 <p>Watch, act or create your own story plots, and share them with the world.</p>
 </div>
 <p>&nbsp;</p>
-<a class="btn btn-primary" data-track="home-en-preorder" href="#offices" data-contact="Join Beta">Join Beta</a>
-</div><div class="col-sm-6 col-sm-pull-6 col-md-9 col-md-pull-3 col-lg-8 col-lg-pull-3"><img decoding="async" class="aligncenter size-full wp-image-59" src="2016/06/online_v2.png" alt="TimePath Online" width="941" height="615" /></div></div>
-              </div>
+<a class="btn btn-primary hidden-xs hidden-sm" data-track="home-en-preorder" href="#offices" data-contact="Join Beta">Join Beta</a>
+</div><div class="col-sm-6 col-sm-pull-6 col-md-9 col-md-pull-3 col-lg-8 col-lg-pull-3"><img decoding="async" class="aligncenter size-full wp-image-59" src="2016/06/online_v2.png" alt="TimePath Online" width="941" height="615" /></div>
+  </div>
             </div>
           </article>
     </div>
-    <div id="offices" class="section section-home section-default" style="background-image: url(uploads/2016/06/map_v2.png)">
+    <div id="offices" class="section section-home section-default" style="background-image: url()">
               <article id="post-68" class="post-68 page type-page status-publish has-post-thumbnail hentry" style="background-image: url(2016/06/map_v2.png)">
             <div class="container">
               <div class="head">
@@ -196,7 +197,7 @@
               </div>
               <div class="body page-content entry-content">
 <div class="row"><div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 text-right">
-<!div class="hidden-xs hidden-sm" -->
+<!-- div class="hidden-xs hidden-sm" -->
 <div>
 
   Timepath closed.<br />
@@ -205,7 +206,7 @@
 3er 2ona<br />
 08009 Barcelona<br />
 +34 93 157 37 62 <small></small> </small></div>
-</div></div>
+</div><!-- /div -->
 <div class="hidden-xs hidden-sm" style="height: 1px;"></div>
 <div class="row"><div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 text-left">
 <!-- h2 class="title"><small>Contact us</small></h2>
